hx-swap='outerHTML' test

--- a/base/public/andre.html
+++ b/base/public/andre.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/htmx/1.9.12/htmx.min.js"></script>
 </head>
 <body>
-    <form hx-post="/andre" hx-trigger="submit" hx-target="#label">
+    <form hx-post="/andre" hx-trigger="submit" hx-target="#label" hx-swap="outerHTML">
         <input type="text" name="label" />
         <button>Enviar</button>
     </form>
