--- a/base/public/andre.html
+++ b/base/public/andre.html
@@ -7,10 +7,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/htmx/1.9.12/htmx.min.js"></script>
 </head>
 <body>
+    <h2>Basic</h2>
     <form hx-post="/andre" hx-trigger="submit" hx-target="#label" hx-swap="outerHTML">
         <input type="text" name="label" />
         <button>Enviar</button>
     </form>
     <div id="label"></div>
+    <hr />
+    <h2>hx-vals</h2>
+    <form hx-post="/valores-adicionais" hx-trigger="submit" hx-target="#vals" hx-swap="outerHTML" hx-vals='{"valorExtra": "bola azul"}'>
+        <input type="text" name="label" />
+        <button>Enviar</button>
+    </form>
+    <div id="vals"></div>
+
 </body>
 </html>
